adjusted to java 21